css/main.css
/* fonts */
@font-face {
	font-family: NeueHaas;
	src: url(/fonts/NHaasGroteskDSPro-55Rg.ttf);
}

@font-face {
	font-family: NeueHaasMedium;
	src: url(/fonts/NHaasGroteskDSPro-65Md.ttf);
}

* {
	-webkit-font-smoothing: antialiased;
	margin:0;
    padding: 0;

}


:root {
	--page-color-transition: background .2s ease, color .2s ease;
}

/* theme variables */
:root.day {
    --color-bg: #F6F6F7;
	--color-text:#202020;
	--color-h1: #202020;
    --color-h4: #9F9EA1;

	--offset-left:0.7rem;
	--offset-bottom: 0.4rem;
	--scale: 1
}

:root.night {
    --color-bg: #0c0c0c;
	--color-text: #C8C8C9;
    --color-h1: #fff;
    --color-h4: #8A898C;


	--offset-left:1.6rem;
	--offset-bottom: 0.8rem;
	--scale: 0
}



html {
	font-size: 62.5%; }


img{
	height: 1.6rem;
	width: auto;
}




body {	
	background-color:var(--color-bg);
	transition: transform 0.5s ease-in-out, var(--page-color-transition);
	color: var(--color-text);
	font-family: NeueHaas;
	font-size: 1.6rem;
	line-height: 2.6rem;
	display:grid;
	grid-template-columns: repeat(12, minmax(0, 1fr));
	grid-gap: 2.4rem;
	height: 72vh;
	place-items: center;
}



.container{
	grid-column: 2 / 10;
	max-width: 355px;
}


.toggle{
	display: inline-block;
	padding-top: 2.4rem;
	margin-bottom: 4.8rem;
	color: var(--color-h1);
	user-select: none;
	-webkit-user-select: none; /* For Safari */
	-moz-user-select: none; /* For Firefox */
	-ms-user-select: none; /* For IE/Edge */
	
}



.sun-and-moon {
	position: absolute;
	width: 1.6rem;
	height: 1.6rem;
	border-radius: 1rem;
	background: var(--color-h1);
	transform-origin: center center;
	transition: transform 0.3s ease, var(--page-color-transition);
	user-select: none;
	-webkit-user-select: none; /* For Safari */
	-moz-user-select: none; /* For Firefox */
	-ms-user-select: none; /* For IE/Edge */
	

}

.sun-and-moon::after {
	position: absolute;
	content: '';
	width: 1.3rem;
	height: 1.3rem;
	left: var(--offset-left);
	bottom: var(--offset-bottom);
	border-radius: 1rem;
	background: var(--color-bg);
	transform-origin: center center;
	transition: transform 0.3s ease, left 0.3s ease, bottom 0.1s ease, var(--page-color-transition);
	user-select: none;
	-webkit-user-select: none; /* For Safari */
	-moz-user-select: none; /* For Firefox */
	-ms-user-select: none; /* For IE/Edge */
	
	
}


#greet {
    margin-bottom: 0.8rem;
    font-size: 3.4rem; 

}



h1 {
	color: var(--color-h1);
	font-family: NeueHaasMedium;
	font-size: 3.4rem; line-height: 3.4rem;
	padding-bottom: 1.4rem;
}


h4 {
	color: var(--color-h4);
	font-size: 1.4rem; line-height: 2rem;
	margin-bottom: 1.4rem; 
	font-weight: 300;
	text-transform: uppercase;
}



p{
	margin-bottom: 2.4rem;
	font-size: 1.8rem;
}


.p3 {
	padding-top: 4.8rem;
}



body a {
	color: var(--color-h1);
	font-family: NeueHaasMedium;
	text-decoration: none;
}



.underline {
	display: inline;
	position: relative;
	overflow: hidden;
	width: 40px;
  }
  
  .underline:after {
	content: "";
	position: absolute;
	z-index: -1;
	left: 0;
	right: 100%;
	bottom: -3px;
	background: #8A898C;
	height: 1.5px;
	transition-property: left right;
	transition-duration: 0.2s;
	transition-timing-function: ease-out;
  }
  .underline:hover:after,
  .underline:focus:after,
  .underline:active:after {
	right: 0;
  }
  
  .underline-rdio {
	display: inline;
	position: relative;
	overflow: hidden;
	width: 40px;
  }
  
  .underline-rdio:after {
	content: "";
	position: absolute;
	z-index: 1;
	left: 0;
	right: 100%;
	bottom: 8px;
	background: #221F26; 
	height: 1px;
	transition-property: left right;
	transition-duration: 0.175s;
	transition-timing-function: ease-out;
  }
  
  .underline-rdio:hover:after,
  .underline-rdio:focus:after,
  .underline-rdio:active:after {
	right: 0;
  }
  
  
  #rdio-psa {
	  color: #8A898C;
	  font-family: NeueHaas;
	  font-size: 12px;
	  letter-spacing: 0.75px;
	  line-height: 20px;
	  margin-top: 4px;
	  opacity: 0;
	  transition-duration: 0.4s;
	  transition-timing-function: ease-in;
  }
  
  .underline-rdio:hover + #rdio-psa {
	  opacity: 1;
  }



/* mobile */
@media (max-width: 550px) {

	.underline-rdio:hover + #rdio-psa {
		opacity: 1;
	}

	.container{
		grid-column: 2/12;
	}


	.underline:after{
		right:0;
	}

}

@media (hover: none) and (pointer: coarse) {
	.underline-rdio:hover + #rdio-psa {
		opacity: 1;
	}
}

